--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,6 +5,13 @@ cors:
 server:
   port: 8888
 
+#Security
+security:
+  jwt:
+    token:
+      secret-key: 53c37
+      expire-lenght: 360000
+
 # Database
 spring:
   datasource:
