--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,30 +1,33 @@
-#CORS
+# CORS
 cors:
-  originPatterns: http://localhost:3000,http://localhost:8080,http://localhost:4200
+  originPatterns:
+    - "http://localhost:3000"
+    - "http://localhost:8080"
+    - "http://localhost:4200"
 
-# Serve
+# Servidor
 server:
   port: 8090
 
-#File
+# Arquivos
 file:
   upload-dir: src/main/resources/static/img
 
-#Security
+# Segurança
 security:
   jwt:
     token:
       secret-key: 53c37
-      expire-lenght: 360000
+      expire-length: 360000
 
-# Database
+# Banco de Dados
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/db_library?useTimezone=true&serverTimezone=UTC
     username: postgres
     password: adminpass
 
-  #Upload e Download
+  # Upload e Download
   servlet:
     multipart:
       enabled: true
@@ -39,9 +42,29 @@ spring:
       ddl-auto: none
     show-sql: false
 
-# Configuracao do Springdoc OpenAPI
+  # Email
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: carlosmiguel.dsa12@gmail.com
+    password: ${sua_password} #htpps://myaccount.google.com/apppasswords
+
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+    test-connection: true
+
+# Configuração do Springdoc OpenAPI
 springdoc:
   swagger-ui:
     use-root-path: true
   packagesToScan: io.github.karMiguel.library.controllers
 
+# API de Notícias
+news:
+  api:
+    key: "d7bba934ec9545d98fbb26a9115172d6"
+    url: "https://newsapi.org/v2/top-headlines"
